--- a/javascript-course.html
+++ b/javascript-course.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width">
     <title>JS Bin</title>
     <script>console.log("Hello there!")</script>
-</head>
+    </head>
 
 <body>
     <h1>Javascript Bootcamp</h1>
+
+<script src="javascript-coursex2.js"></script>
 </body>
 
 </html>
